# ai-ppairium-v2

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: router.py
app/api/v1/: conversation.py  system.py
app/config/: .env.example  settings.py
app/core/: logging.py
app/middleware/: correlation.py  logging.py
app/models/: conversation.py
