[project]
name = "fastapizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "py-spy>=0.4.1",
]
